Registro de Tips

--- a/vistas/css/estilo_plantilla_ver-tips.css
+++ b/vistas/css/estilo_plantilla_ver-tips.css
@@ -31,7 +31,8 @@
 }
 
 .titulo-tip div{
-    width: 20%;
+    padding: 10px;
+    width: 50%;
     border: white solid 5px;
     border-radius: 16px;
     font-size: 20px;
