--- a/vistas/css/estilo_plantilla_registro-noticias.css
+++ b/vistas/css/estilo_plantilla_registro-noticias.css
@@ -153,7 +153,6 @@
 }
 
 .imagen{
-    display: flex;
     position: relative;
     justify-content: center;
     width: 100%;
@@ -207,4 +206,10 @@
 .categoria-noticia{
     width: 100%;
     border: #00AB8D solid 3px;
+}
+
+.imagen-noticia{
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
 }
